--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 	
 		<title>Movies App</title>
 		
-		<link rel="stylesheet" href="/assets/css/index.css" />
+		<link rel="stylesheet" href="assets/css/index.css" />
 		
-		<script src="/js/lib/jquery-1.12.3.js"></script>
+		<script src="js/lib/jquery-1.12.3.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -23,10 +23,10 @@
 			<div id="catalog"></div>
 			<div id="pagination"></div>
 		</div>
-		<script src="/js/api/catalogue.js"></script>
-		<script src="/js/api/paginator.js"></script>
-		<script src="/js/api/watchlist.js"></script>
-		<script src="/js/api/movieApp.js"></script>
-		<script src="/js/index.js"></script>
+		<script src="js/api/catalogue.js"></script>
+		<script src="js/api/paginator.js"></script>
+		<script src="js/api/watchlist.js"></script>
+		<script src="js/api/movieApp.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
